<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center_vertical"
    android:paddingLeft="5dp">

    <LinearLayout
        android:id="@+id/ll_device_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_group_name" />

        <TextView
            android:id="@+id/tv_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:drawableLeft="@drawable/shape_state_default"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/shape_state_red"
        android:gravity="center_vertical"
        android:text="@string/interrupt" />
    <!--android:drawablePadding="10dp"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/shape_state_yellow"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/low_power" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/shape_state_grey"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/temporarily_closed" />

    <TextView
        android:id="@+id/tv_conflict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/shape_state_conflict"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/conflict"
        android:visibility="gone" />

</LinearLayout>