<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_10"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:paddingRight="5dp"
        android:background="@drawable/edit_search_bg"
        android:hint="@string/edit_hint"
        android:paddingLeft="10dp"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_light" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>